# Advanced-AI-Agency-System

./: .env  README.md  main.py  mcp_config.yaml  pyproject.toml
agency/: __init__.py  agent_factory.py  agent_registry.py  config.py  parent_agent.py
agency/api/: __init__.py  server.py
agency/api/middleware/: __init__.py  auth.py
agency/api/routes/: __init__.py  a2a.py  agents.py  auth.py
agency/communication/: __init__.py  a2a_client.py  a2a_server.py  mcp_integration.py
agency/models/: __init__.py  model_factory.py  model_registry.py
agency/tools/: __init__.py  agent_creation.py  agent_management.py  communication.py
agency/utils/: __init__.py  logging.py  persistence.py  security.py
examples/: __init__.py  advanced_agency.py  basic_agency.py  multi_agent_workflow.py
